--- a/assets/css/orders.css
+++ b/assets/css/orders.css
@@ -20,15 +20,20 @@
   background: var(--card-bg-color);
   border-radius: 16px;
   box-shadow: 0 2px 12px rgba(46, 26, 0, 0.06);
-  border: 1px solid var(--secondary-color);
   overflow: hidden;
 }
+
+ @media (max-width: 767.98px) {
+    .no-shadow-mobile {
+      box-shadow: none !important;
+    }
+  }
 
 .enhanced-page-header {
   background: var(--card-bg-color);
   /* padding: 2rem; */
   padding-top: 1.5rem;
-  padding-bottom: 0.5rem;
+  padding-bottom: 3rem;
   padding-left: 2rem;
   padding-right: 2rem;
   position: relative;
@@ -51,7 +56,7 @@
 }
 
 .page-title-text {
-  font-size: var(--subheading);
+  font-size: var(--heading);
   font-weight: 600;
   color: var(--text-color-dark);
   margin: 0;
@@ -732,6 +737,9 @@
     right: 1rem;
     left: 1rem;
     max-width: none;
+  }
+  .page-title-text{
+    font-size: var(--subheading);
   }
 }
 
